# ane_moe

./: .gitignore  README.md  check_keys.py  compile_model.sh  convert.py  convert_attention.py  convert_experts.py  convert_lm_head.py  convert_mlp.py  convert_norm.py  convert_rope.py  convert_router.py  export_embedding.py  pyproject.toml  requirements.txt
ane-moe-inference/ane-moe-inference/: ContentView.swift  ane_moe_inferenceApp.swift
ane-moe-inference/ane-moe-inference.xcodeproj/: project.pbxproj
ane-moe-inference/ane-moe-inference.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ane-moe-inference/ane-moe-inference.xcodeproj/project.xcworkspace/xcuserdata/kamisori-daijin.xcuserdatad/: UserInterfaceState.xcuserstate
ane-moe-inference/ane-moe-inference.xcodeproj/xcuserdata/kamisori-daijin.xcuserdatad/xcschemes/: xcschememanagement.plist
ane-moe-inference/ane-moe-inferenceTests/: ane_moe_inferenceTests.swift
ane_moe/converter/: attention_converter.py  experts_converter.py  mlp_converter.py  rope_converter.py  router_converter.py
ane_moe/models/: attention.py  experts.py  gateddeltanet.py  mlp.py  rope.py  router.py
ane_moe_engine/: Package.resolved  Package.swift
ane_moe_engine/Sources/ane_moe_engine/: EmbeddingContainer.swift  ExpertsContainer.swift  FullAttentionContainer.swift  GatedDeltaNetContainer.swift  LMHeadPipeline.swift  MLPContainer.swift  NormContainer.swift  Qwen3_5MoePipeline.swift  QwenTokenizer.swift  RoPEContainer.swift  RouterContainer.swift
